--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "compodoc": "compodoc -p tsconfig.json -s -o"
+    "compodoc": "compodoc -p tsconfig.json -s -o",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.1.2",
-    "@angular/compiler": "^20.1.2",
-    "@angular/core": "^20.1.2",
-    "@angular/forms": "^20.1.2",
-    "@angular/platform-browser": "^20.1.2",
-    "@angular/platform-browser-dynamic": "^20.1.2",
+    "@angular/common": "^20.1.6",
+    "@angular/compiler": "^20.1.6",
+    "@angular/core": "^20.1.6",
+    "@angular/forms": "^20.1.6",
+    "@angular/platform-browser": "^20.1.6",
+    "@angular/platform-browser-dynamic": "^20.1.6",
     "@angular/router": "^20.1.2",
-    "@angular/service-worker": "^20.1.2",
+    "@angular/service-worker": "^20.1.6",
     "@ngrx/store": "20.0.0-rc.0",
     "@primeng/themes": "20.0.0",
     "@tailwindcss/postcss": "^4.1.11",
@@ -38,7 +39,7 @@
   "devDependencies": {
     "@angular/build": "^20.1.1",
     "@angular/cli": "20.1.1",
-    "@angular/compiler-cli": "20.1.2",
+    "@angular/compiler-cli": "20.1.6",
     "@compodoc/compodoc": "^1.1.26",
     "@ngrx/store-devtools": "20.0.0-rc.0",
     "@types/crypto-js": "^4.2.2",
@@ -51,6 +52,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.6.2",
     "typescript": "~5.8.3"
   }
 }
